--- a/latex/matter/implbasic.tex
+++ b/latex/matter/implbasic.tex
@@ -31,7 +31,7 @@ For the English, Mandarin and Spanish languages the database includes speech fro
 	\label{tab:callfrienddial}
 	\end{center}
 \end{table}	
-For each language or dialect there is about 60 hours of speech. Approximately 50 minutes of speech from each dialect was used as development data. This data set is used to test the performance of the system during development. By using a separate data set for the final evaluation, the performance of the system will be given from unseen data. If implementation decisions were too be influenced by the data set used for the final performance evaluation, then the resulting score might be too optimistic. To make sure that the system recognizes languages and not persons, no speaker was present in both the training and development set. 
+For each language or dialect there is about 60 hours of speech. Approximately 50 minutes of speech from each dialect was used as development data. This data set is used to test the performance of the system during development. By using a separate data set for the final evaluation, the performance of the system will be given from unseen data. If implementation decisions were to be influenced by the data set used for the final performance evaluation, then the resulting score might be too optimistic. To make sure that the system recognizes languages and not persons, no speaker was present in both the training and development set. We aimed for having few speakers in the development set in order for the systems to be trained on as many speakers as possible.
 
 \section{Evaluation Set}
 
