--- a/latex/oppgave.tex
+++ b/latex/oppgave.tex
@@ -23,12 +23,12 @@
 \input{matter/ivector}
 \input{matter/classifier}
 
-\part{implementation}
+\part{Implementation}
 \input{matter/implbasic}
 \input{matter/implivector}
 
-\part{results}
-
+\part{Results}
+\input{matter/baselineresults}
 
 
 \bibliographystyle{ieeetr}
